samples/_failures_safe/1761464010_674b19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c43847ce.c: In function ‘main’:
./samples/SAFE/__tmp_c43847ce.c:157:29: error: missing terminating " character
  157 |             fprintf(stderr, "Error: Invalid
      |                             ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c43847ce.c:157:13: error: expected expression at end of input
  157 |             fprintf(stderr, "Error: Invalid
      |             ^~~~~~~
./samples/SAFE/__tmp_c43847ce.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c43847ce.c:157:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c43847ce.c:157:13: error: expected declaration or statement at end of input
